[tool.poetry]
name = "drivy_business"
version = "0.1.0"
description = ""
authors = ["zekiblue <zekiberkulu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"
pydantic = "^1.8.2"
httpx = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
