[tool.poetry]
name = "drivy_tools"
version = "0.2.0"
description = ""
authors = ["zekiblue <zekiberkulu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"
pydantic = "^1.8.2"
httpx = "^0.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
isort = "^5.9.3"
flake9 = "^3.8.3"
pyproject-flake8 = "^0.0.1-alpha.2"

[tool.flake8]
max-line-length = 120
max-complexity = 10
extend-ignore = "E203,"

[tool.black]
line-length = 120

[tool.poetry.scripts]
drivy = "drivy_tools.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
