[tool.poetry]
name = "drivy_tools"
version = "0.2.6"
description = "Tool to make use of Drivy"
license = "Proprietary"
authors = ["zekiblue <zekiberkulu@gmail.com>"]
homepage = "https://github.com/zekiblue/drivy_tools"
repository = "https://github.com/zekiblue/drivy_tools"
readme = "README.md"
exclude = ["scripts", "Makefile"]


[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"
pydantic = "^1.8.2"
httpx = "^0.19.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"
isort = "^5.9.3"
flake9 = "^3.8.3"
pyproject-flake8 = "^0.0.1-alpha.2"

[tool.flake8]
max-line-length = 120
max-complexity = 25
extend-ignore = "E203,"

[tool.black]
line-length = 120

[tool.poetry.scripts]
drivy = "drivy_tools.main:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
